Fix wrapping on players page filters.

--- a/src/components/Pages/HistoryPage/HistoryPage.scss
+++ b/src/components/Pages/HistoryPage/HistoryPage.scss
@@ -12,6 +12,7 @@
 		align-items: center;
 		background-color: inherit;
 		padding-top: 5px;
+		margin-bottom: 10px;
 
 		.header-label-wrapper {
 			display: flex;
