--- a/src/components/Pages/LineupsPage/LineupsPage.scss
+++ b/src/components/Pages/LineupsPage/LineupsPage.scss
@@ -182,7 +182,8 @@ h3 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
+	width: 95%;
+	max-width: 1100px;
 
 	.lineups-table-wrapper-inner {
 		width: 100%;
@@ -195,5 +196,3 @@ h3 {
 		}
 	}
 }
-
-
