--- a/src/components/TablesLists/PlayersTable/PlayersTable.scss
+++ b/src/components/TablesLists/PlayersTable/PlayersTable.scss
@@ -9,10 +9,15 @@
 	.pos-filter-wrapper {
 		display: flex;
 		width: 100%;
+		flex-wrap: wrap-reverse;
 		justify-content: space-between;
 		align-items: left;
-		margin-top: 10px;
+		margin-top: -10px;
 		margin-bottom: 10px;
+
+		.pos-filter-wrapper-inner {
+			margin-top: 10px;
+		}
 
 		.filter-btn, .filter-btn-active {
 			width: 50px;
@@ -27,6 +32,7 @@
 			justify-content: center;
 			height: fit-content;
 			border-radius: 6px;
+			margin-top: 10px;
 
 			.search-input {
 				font-size: 11pt;
@@ -59,7 +65,7 @@
 		font-weight: 600;
 	}
 
-	.lineups-table {
+	.players-table {
 		font-size: 10pt;
 		width: 100%;
 		max-width: 1100px;
@@ -72,20 +78,27 @@
 		}
 
 		.col-labels {
-
 			.col-label {
 				box-shadow: inset 1px 0px 0 var(--grey-5);
 
 			}
 		}
-
-		.table-header {
-		}
-
 		tbody {
 			tr:hover {
 				outline: 1px solid var(--grey-6);
 			}
+		}
+	}
+}
+
+@media (max-width: 700px) {
+	.players-table {
+		display: block;
+		overflow-x: auto;
+		td, th {
+			font-weight: 400;
+			font-size: 9pt;
+			padding: 5px;
 		}
 	}
 }
